[metadata]
name = f5-openstack-agent
version = 0.1.0
summary = F5 Networks Agent for OpenStack services
description-file =
    README.md
author = F5 Networks
author-email = openstack-dev@f5.com
home-page = https://github.com/F5Networks/f5-openstack-agent
classifier =
    Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7

[files]
packages =
    f5_openstack_agent
data_files =
    /etc/neutron/services/f5 =
	    etc/neutron/services/f5/f5-openstack-agent.ini
    /etc/init.d =
		etc/init.d/f5-oslbaasv2-agent
    /usr/lib/systemd/system =
    		lib/systemd/system/f5-openstack-agent.service

[entry_points]
console_scripts =
    f5-oslbaasv2-agent = f5_openstack_agent.lbaasv2.drivers.bigip.agent:main
